added responsiveness, smooth animation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input class="search" type="text" placeholder="Search location..." />
       </div>
       <div class="content">
-        <div class="weather">
+        <div class="weather transition">
           <div class="weather-wrapper">
             <div class="condition"></div>
             <div class="location"></div>
