fixed error message

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container">
       <div class="header">
         <input class="search" type="text" placeholder="Search location..." />
+        <span class="error">Location not found!</span>
       </div>
       <div class="content">
         <div class="weather transition">
